# url_shortener

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
.github/workflows/: deploy.yml  test.yml
src/: main.rs
svelte/: package.json
svelte/src/: app.html
svelte/src/routes/: index.svelte
